syntax = "proto3";

option csharp_namespace = "DevBook.Grpc";
package appsetups;

import "google/protobuf/empty.proto";

service AppSetupsGrpcService {
  rpc GetAll (GetAllRequest) returns (GetAllResponse);
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
  rpc Create (CreateRequest) returns (google.protobuf.Empty);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message AppSetupDto {
  string id = 1;
  string name = 2;
  string path = 3;
  optional string arguments = 4; 
}

message GetAllRequest {}

message GetAllResponse {
  repeated AppSetupDto items = 1;
}

message GetByIdRequest {
  string id = 1;
}

message GetByIdResponse {
  AppSetupDto appSetup = 1;
}

message CreateRequest {
  string name = 2;
  string path = 3;
  optional string arguments = 4; 
}

message UpdateRequest {
  AppSetupDto item = 1;
}

message DeleteRequest {
  string id = 1;
}
